@@ -40,9 +40,7 @@ LastFmServiceConfig::LastFmServiceConfig()
     if( scrobble || fetch_sim ) // if either of these are true we need the wallet.
     {
         // open wallet unless explicitly told not to
-        if( !( config.readEntry( "ignoreWallet", QString() ) == "yes" ) ) {
-            m_wallet = KWallet::Wallet::openWallet( KWallet::Wallet::NetworkWallet(), 0, KWallet::Wallet::Synchronous );
-        }
+        tryToOpenWallet();
     }
     load();
 }
@@ -103,7 +101,7 @@ void LastFmServiceConfig::save()
     config.writeEntry( "fetchSimilar", m_fetchSimilar );
     config.writeEntry( "scrobbleComposer", m_scrobbleComposer );
 
-    if ( !m_wallet && config.readEntry( "ignoreWallet", QString() ) != "yes" )
+    if ( !tryToOpenWallet() && config.readEntry( "ignoreWallet", QString() ) != "yes" )
         askAboutMissingKWallet();
 
     if( m_wallet )
@@ -132,6 +130,19 @@ LastFmServiceConfig::clearSessionKey()
     setSessionKey( QString() );
     KConfigGroup config = KGlobal::config()->group( configSectionName() );
     config.writeEntry( "sessionKey", m_sessionKey );
+}
+
+bool
+LastFmServiceConfig::tryToOpenWallet()
+{
+    if( m_wallet )
+        return true;
+
+    KConfigGroup config = KGlobal::config()->group( configSectionName() );
+    if( !( config.readEntry( "ignoreWallet", QString() ) == "yes" ) ) {
+        m_wallet = KWallet::Wallet::openWallet( KWallet::Wallet::NetworkWallet(), 0, KWallet::Wallet::Synchronous );
+    }
+    return m_wallet;
 }
 
 void
